--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "numpy<2.0",
     "pandas",
     "rich",
-    "scipy"
+    "scipy",
+    "tqdm"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
