--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "torchdet"
-version = "0.2"
+dynamic = ["version"]
 description = "Find non-deterministic functions in your pytorch code"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -33,3 +33,6 @@ reportUnusedVariable = true
 
 [tool.ruff]
 line-length = 100
+
+[tool.hatch.version]
+path = "src/torchdet/__version__.py"
