Added a hatchling test env in anticipation of having actual unit tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,9 @@ line-length = 100
 
 [tool.hatch.version]
 path = "src/torchdet/__version__.py"
+
+[tool.hatch.envs.test]
+dependencies = [
+  "pytest",
+  "pytest-cov"
+]
